@@ -1,3 +1,8 @@
+2006-03-23  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/textDisp.test:	Updated expected error messages to match the
+	standardized formats established on 2005-11-17.  [Bug 1370296]
+
 2006-03-22  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5a4 TAGGED FOR RELEASE ***
